# checkip

./: README.md  pyproject.toml
.github/workflows/: create-release.yml  python-package.yml
src/: check_ip.py  cli.py
tests/: test_check_ip.py
